--- a/index.html
+++ b/index.html
@@ -1,1 +1,19 @@
-Hi my first repository
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title> My First Website </title>
+</head>
+<body>
+    <h1>Welcome to My First Website</h1>
+    <p>This is a simple HTML page to demonstrate basic structure.</p>
+    <ul>
+        <li>Hi My Name is Gurjant Sandha</li>
+        <li>I am Devlopinng WebSite</li>
+        <li>I am Escondii Hunni</li>
+    </ul>
+    <p>Thank you for visiting!</p>
+    
+</body>
+</html>
